--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -46,7 +46,7 @@ import { Callout } from 'nextra/components';
   <Tabs.Tab>
     <div className="mt-6">
       <div className="flex items-center gap-2 mb-6">
-        <span className="w-2 h-2 rounded-full bg-green-500 animate-[pulse_3s_ease-in-out_infinite]"></span>
+        <span className="w-2 h-2 rounded-full bg-black animate-[pulse_3s_ease-in-out_infinite]"></span>
         <span className="text-gray-600">Recommended for most use cases</span>
       </div>
       
@@ -67,7 +67,7 @@ import { Callout } from 'nextra/components';
                 <div className="text-xl font-mono">1,900 MiB</div>
                 <div className="text-sm text-gray-500">Compressed: 1,733 MiB</div>
                 <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz" className="text-blue-500 hover:text-blue-600 text-sm">
+                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
                     Direct Download →
                   </a>
                 </div>
@@ -138,7 +138,7 @@ import { Callout } from 'nextra/components';
                 <div className="text-xl font-mono">1,290 MiB</div>
                 <div className="text-sm text-gray-500">Compressed: 1,167 MiB</div>
                 <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz" className="text-blue-500 hover:text-blue-600 text-sm">
+                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
                     Direct Download →
                   </a>
                 </div>
@@ -204,7 +204,7 @@ import { Callout } from 'nextra/components';
   <Tabs.Tab>
     <div className="mt-6">
       <div className="flex items-center gap-2 mb-6">
-        <span className="w-2 h-2 rounded-full bg-blue-500 animate-[pulse_3s_ease-in-out_infinite]"></span>
+        <span className="w-2 h-2 rounded-full bg-blue animate-[pulse_3s_ease-in-out_infinite]"></span>
         <span className="text-gray-600">Optimized for edge devices</span>
       </div>
       
@@ -221,7 +221,7 @@ import { Callout } from 'nextra/components';
                 <div className="text-xl font-mono">660 MiB</div>
                 <div className="text-sm text-gray-500">Compressed: 593 MiB</div>
                 <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz" className="text-blue-500 hover:text-blue-600 text-sm">
+                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
                     Direct Download →
                   </a>
                 </div>
@@ -292,7 +292,7 @@ import { Callout } from 'nextra/components';
                 <div className="text-xl font-mono">477 MiB</div>
                 <div className="text-sm text-gray-500">Compressed: 422 MiB</div>
                 <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz" className="text-blue-500 hover:text-blue-600 text-sm">
+                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
                     Direct Download →
                   </a>
                 </div>
@@ -408,9 +408,9 @@ import { Callout } from 'nextra/components';
 
       <div className="bg-black rounded-lg p-4 mb-6">
         <h4 className="text-white font-mono mb-2">Run Conditions</h4>
-        <div className="font-mono text-sm">
-          <div className="text-green-400">• CPU Only (No GPU/NPU acceleration)</div>
-          <div className="text-green-400">• Stock frequencies</div>
+        <div className="font-mono text-sm text-white">
+          <div>• CPU Only (No GPU/NPU acceleration)</div>
+          <div>• Stock frequencies</div>
         </div>
       </div>
 
@@ -557,9 +557,9 @@ import { Callout } from 'nextra/components';
 
       <div className="bg-black rounded-lg p-4 mb-6">
         <h4 className="text-white font-mono mb-2">Run Conditions</h4>
-        <div className="font-mono text-sm">
-          <div className="text-blue-400">• CPU Only (NPU/GPU disabled)</div>
-          <div className="text-blue-400">• Stock frequencies</div>
+        <div className="font-mono text-sm text-white">
+          <div>• CPU Only (NPU/GPU disabled)</div>
+          <div>• Stock frequencies</div>
         </div>
       </div>
 
