--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -56,8 +56,8 @@ Get started with Moondream in minutes.
 
 ## Setup Options
 
-<div className="relative mt-8">
-  <div className="bg-gradient-to-b from-blue-50/50 to-transparent p-10 rounded-2xl mb-8">
+<div className="relative">
+  <div className="bg-gradient-to-b from-blue-50/50 to-transparent pb-10 rounded-2xl mb-8">
     <div className="flex items-start gap-8">
       <div className="flex-1">
         <div className="text-gray-600">
