nit: ui, config

--- a/src/pages/cloud/query.mdx
+++ b/src/pages/cloud/query.mdx
@@ -42,7 +42,7 @@ Ask questions about images and get natural language answers.
 
 First, install the package:
 
-<Tabs items={['Python', 'Node.js', 'Python (OpenAI)', 'Node.js (OpenAI)', 'cURL']}>
+<Tabs items={['Python', 'Node.js', 'Python (OpenAI)', 'Node.js (OpenAI)']}>
   <Tabs.Tab>
 ~~~bash
 pip install moondream pillow
@@ -61,11 +61,6 @@ pip install openai pillow
   <Tabs.Tab>
 ~~~bash
 npm install openai
-~~~
-  </Tabs.Tab>
-  <Tabs.Tab>
-~~~bash
-# No installation needed
 ~~~
   </Tabs.Tab>
 </Tabs>
