--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -60,7 +60,7 @@ Get started with Moondream in minutes.
   <div className="bg-gradient-to-b from-blue-50/50 to-transparent pb-10 rounded-2xl mb-8">
     <div className="flex items-start gap-8">
       <div className="flex-1">
-        <div className="text-gray-600">
+        <div className="text-gray-600 mt-6">
           Follow these steps...
           <div className="mt-6 space-y-6">
             <div className="flex items-center gap-4">
