ui adjustment, href to demo

--- a/src/pages/recipes.mdx
+++ b/src/pages/recipes.mdx
@@ -41,7 +41,7 @@ Explore real-world examples and implementation patterns using Moondream.
     title="Interactive Image Analysis Demo"
     description="A Gradio-based web interface for real-time image analysis, featuring visual question answering and object detection with bounding box visualization."
     github="https://github.com/vikhyat/moondream/blob/main/gradio_demo.py"
-    demo="https://moondream.ai/demo"
+    demo="https://youtu.be/T7sxvrJLJ14?feature=shared&t=1072"
     tags={['Gradio', 'Interactive UI', 'Object Detection', 'VQA']}
   >
     <Recipe.CodePreview 
