--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -1,623 +1,131 @@
-import Head from 'next/head'
-import { Tabs } from 'nextra/components';
-import { Callout } from 'nextra/components';
+import Head from "next/head";
+import { Tabs } from "nextra/components";
+import { Callout } from "nextra/components";
+import FeatureSupport from "../components/FeatureSupport";
+import Benchmarks from "../components/Benchmarks";
+import ModelVariants from "../components/ModelVariants";
 
 <Head>
   <title>Specifications - Moondream Documentation</title>
-  <meta name="description" content="Detailed technical specifications for Moondream vision AI, including model downloads, memory requirements, performance benchmarks, and hardware recommendations." />
+  <meta
+    name="description"
+    content="Detailed technical specifications for Moondream vision AI, including model downloads, memory requirements, performance benchmarks, and hardware recommendations."
+  />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-  {/* Open Graph */}
-  <meta property="og:title" content="Moondream Technical Specifications - Model Details & Performance" />
-  <meta property="og:description" content="Detailed technical specifications for Moondream vision AI, including model architecture, memory requirements, performance benchmarks, and hardware recommendations." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://docs.moondream.ai/specifications" />
-  
-  
-  {/* Twitter */}
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Moondream Technical Specifications - Model Details & Performance" />
-  <meta name="twitter:description" content="Detailed technical specifications for Moondream vision AI, including model architecture, memory requirements, performance benchmarks, and hardware recommendations." />
-  
-  
-  {/* Schema.org for Google */}
-  <script type="application/ld+json">
-    {JSON.stringify({
-      "@context": "https://schema.org",
-      "@type": "TechArticle",
-      "headline": "Moondream Vision AI Technical Specifications",
-      "description": "Comprehensive technical details and performance metrics for Moondream",
-      "articleSection": "Technical Documentation",
-      "keywords": "model architecture, memory requirements, performance benchmarks, hardware specifications, technical details"
-    })}
-  </script>
+
+{/* Open Graph */}
+
+{" "}
+
+<meta
+  property="og:title"
+  content="Moondream Technical Specifications - Model Details & Performance"
+/>
+<meta
+  property="og:description"
+  content="Detailed technical specifications for Moondream vision AI, including model architecture, memory requirements, performance benchmarks, and hardware recommendations."
+/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://docs.moondream.ai/specifications" />
+
+{/* Twitter */}
+
+{" "}
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta
+  name="twitter:title"
+  content="Moondream Technical Specifications - Model Details & Performance"
+/>
+<meta
+  name="twitter:description"
+  content="Detailed technical specifications for Moondream vision AI, including model architecture, memory requirements, performance benchmarks, and hardware recommendations."
+/>
+
+{/* Schema.org for Google */}
+
+{" "}
+
+<script type="application/ld+json">
+  {JSON.stringify({
+    "@context": "https://schema.org",
+    "@type": "TechArticle",
+    headline: "Moondream Vision AI Technical Specifications",
+    description:
+      "Comprehensive technical details and performance metrics for Moondream",
+    articleSection: "Technical Documentation",
+    keywords:
+      "model architecture, memory requirements, performance benchmarks, hardware specifications, technical details",
+  })}
+</script>
+
 </Head>
 
 # Technical Specifications
 
-<div className='text-lg text-gray-600 mb-12'>
-	Moondream offers a range of models optimized for different use cases, from edge devices to high-performance servers. All models support the same core capabilities with different
-	performance characteristics.
+<div className="text-lg text-gray-600 dark:text-gray-300 mb-12">
+  Moondream offers a range of models optimized for different use cases, from
+  edge devices to high-performance servers. All models support the same core
+  capabilities with different performance characteristics.
 </div>
 
 ## Model Variants
 
-<Tabs items={['2B Models', '0.5B Models']}>
-  <Tabs.Tab>
-    <div className="mt-6">
-      <div className="flex items-center gap-2 mb-6">
-        <span className="w-2 h-2 rounded-full bg-black animate-[pulse_3s_ease-in-out_infinite]"></span>
-        <span className="text-gray-600">Recommended for most use cases</span>
-      </div>
-      
-      <div className="space-y-4">
-       
-        
-
-
-        <div className="relative bg-white rounded-lg border border-gray-200 overflow-hidden">
-          <div className="p-6">
-            <div className="flex flex-col md:flex-row justify-between items-start mb-4">
-              <div>
-                <h3 className="text-2xl font-semibold">INT8 Model</h3>
-                <div className="text-gray-600 mt-1">Balanced performance and quality</div>
-                <div className="text-gray-600 mt-1 font-mono">Requires <span className="bg-yellow-50">2,624 MiB</span> runtime memory</div>
-              </div>
-              <div className="text-left md:text-right mt-2 md:mt-0">
-                <div className="text-xl font-mono">1,900 MiB</div>
-                <div className="text-sm text-gray-500">Compressed: 1,733 MiB</div>
-                <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
-                    Direct Download →
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div className="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8">
-
-              <div>
-                <h4 className="font-medium text-gray-700 mb-3">Best For</h4>
-                <ul className="space-y-2 text-gray-600">
-                  <li>• Production APIs</li>
-                  <li>• Cloud deployment</li>
-                  <li>• High-throughput services</li>
-                </ul>
-              </div>
-            </div>
-
-            <div className="mt-6 pt-4 border-t border-gray-100">
-              <div className="mb-2">
-                <code className="text-sm bg-gray-50 px-2 py-1 rounded">onnx branch</code>
-              </div>
-              <div className="rounded-md border border-gray-200 overflow-hidden">
-                <Tabs items={['Linux', 'Mac', 'Windows', 'Python']}>
-                  <Tabs.Tab>
-                    ```bash
-                    wget https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```bash
-                    curl -L -o moondream-2b-int8.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```powershell
-                    curl.exe -L -o moondream-2b-int8.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```python
-                    import requests
-
-                    url = "https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int8.mf.gz"
-                    response = requests.get(url)
-                    with open("moondream-2b-int8.mf.gz", "wb") as f:
-                        f.write(response.content)
-                    ```
-                  </Tabs.Tab>
-                </Tabs>
-                <div className="text-xs text-gray-500 p-2 bg-gray-50 border-t border-gray-200">
-                  Downloads: moondream-2b-int8.mf.gz
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div className="bg-white rounded-lg border border-gray-200">
-          <div className="p-6">
-            <div className="flex flex-col md:flex-row justify-between items-start mb-4">
-              <div>
-                <h3 className="text-2xl font-semibold">INT4 Model</h3>
-                <div className="text-gray-600 mt-1">Maximum compression</div>
-                <div className="text-gray-600 mt-1 font-mono">Requires <span className="bg-yellow-50">2,002 MiB</span> runtime memory</div>
-              </div>
-              <div className="text-left md:text-right mt-2 md:mt-0">
-                <div className="text-xl font-mono">1,290 MiB</div>
-                <div className="text-sm text-gray-500">Compressed: 1,167 MiB</div>
-                <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
-                    Direct Download →
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div className="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8">
-
-              <div>
-                <h4 className="font-medium text-gray-700 mb-3">Best For</h4>
-                <ul className="space-y-2 text-gray-600">
-                  <li>• Memory constraints</li>
-                  <li>• Local development</li>
-                  <li>• Testing environments</li>
-                </ul>
-              </div>
-            </div>
-
-            <div className="mt-6 pt-4 border-t border-gray-100">
-              <div className="mb-2">
-                <code className="text-sm bg-gray-50 px-2 py-1 rounded">onnx branch</code>
-              </div>
-              <div className="rounded-md border border-gray-200 overflow-hidden">
-                <Tabs items={['Linux', 'Mac', 'Windows', 'Python']}>
-                  <Tabs.Tab>
-                    ```bash
-                    wget https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```bash
-                    curl -L -o moondream-2b-int4.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```powershell
-                    curl.exe -L -o moondream-2b-int4.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```python
-                    import requests
-
-                    url = "https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-2b-int4.mf.gz"
-                    response = requests.get(url)
-                    with open("moondream-2b-int4.mf.gz", "wb") as f:
-                        f.write(response.content)
-                    ```
-                  </Tabs.Tab>
-                </Tabs>
-                <div className="text-xs text-gray-500 p-2 bg-gray-50 border-t border-gray-200">
-                  Downloads: moondream-2b-int4.mf.gz
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </Tabs.Tab>
-  
-  <Tabs.Tab>
-    <div className="mt-6">
-      <div className="flex items-center gap-2 mb-6">
-        <span className="w-2 h-2 rounded-full bg-blue animate-[pulse_3s_ease-in-out_infinite]"></span>
-        <span className="text-gray-600">Optimized for edge devices</span>
-      </div>
-      
-      <div className="space-y-4">
-        <div className="relative bg-white rounded-lg border border-gray-200 overflow-hidden">
-          <div className="p-6">
-            <div className="flex flex-col md:flex-row justify-between items-start mb-4">
-              <div>
-                <h3 className="text-2xl font-semibold">INT8 Model (0.5B)</h3>
-                <div className="text-gray-600 mt-1">Fast CPU inference</div>
-                <div className="text-gray-600 mt-1 font-mono">Requires <span className="bg-yellow-50">996 MiB</span> runtime memory</div>
-              </div>
-              <div className="text-left md:text-right mt-2 md:mt-0">
-                <div className="text-xl font-mono">660 MiB</div>
-                <div className="text-sm text-gray-500">Compressed: 593 MiB</div>
-                <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
-                    Direct Download →
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div className="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8">
-             
-              <div>
-                <h4 className="font-medium text-gray-700 mb-3">Best For</h4>
-                <ul className="space-y-2 text-gray-600">
-                  <li>• Raspberry Pi 4</li>
-                  <li>• Edge devices</li>
-                  <li>• Local development</li>
-                </ul>
-              </div>
-            </div>
-
-            <div className="mt-6 pt-4 border-t border-gray-100">
-              <div className="mb-2">
-                <code className="text-sm bg-gray-50 px-2 py-1 rounded">onnx branch</code>
-              </div>
-              <div className="rounded-md border border-gray-200 overflow-hidden">
-                <Tabs items={['Linux', 'Mac', 'Windows', 'Python']}>
-                  <Tabs.Tab>
-                    ```bash
-                    wget https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```bash
-                    curl -L -o moondream-0_5b-int8.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```powershell
-                    curl.exe -L -o moondream-0_5b-int8.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```python
-                    import requests
-
-                    url = "https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int8.mf.gz"
-                    response = requests.get(url)
-                    with open("moondream-0_5b-int8.mf.gz", "wb") as f:
-                        f.write(response.content)
-                    ```
-                  </Tabs.Tab>
-                </Tabs>
-                <div className="text-xs text-gray-500 p-2 bg-gray-50 border-t border-gray-200">
-                  Downloads: moondream-0_5b-int8.mf.gz
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div className="bg-white rounded-lg border border-gray-200">
-          <div className="p-6">
-            <div className="flex flex-col md:flex-row justify-between items-start mb-4">
-              <div>
-                <h3 className="text-2xl font-semibold">INT4 Model (0.5B)</h3>
-                <div className="text-gray-600 mt-1">Ultra-lightweight deployment</div>
-                <div className="text-gray-600 mt-1 font-mono">Requires <span className="bg-yellow-50">816 MiB</span> runtime memory</div>
-              </div>
-              <div className="text-left md:text-right mt-2 md:mt-0">
-                <div className="text-xl font-mono">477 MiB</div>
-                <div className="text-sm text-gray-500">Compressed: 422 MiB</div>
-                <div className="mt-2">
-                  <a href="https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz" className="text-[#4363CC] hover:text-[#9FB6EB] text-sm">
-                    Direct Download →
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div className="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8">
-             
-              <div>
-                <h4 className="font-medium text-gray-700 mb-3">Best For</h4>
-                <ul className="space-y-2 text-gray-600">
-                  <li>• Mobile devices</li>
-                  <li>• IoT deployment</li>
-                  <li>• Embedded systems</li>
-                </ul>
-              </div>
-            </div>
-
-            <div className="mt-6 pt-4 border-t border-gray-100">
-              <div className="mb-2">
-                <code className="text-sm bg-gray-50 px-2 py-1 rounded">onnx branch</code>
-              </div>
-              <div className="rounded-md border border-gray-200 overflow-hidden">
-                <Tabs items={['Linux', 'Mac', 'Windows', 'Python']}>
-                  <Tabs.Tab>
-                    ```bash
-                    wget https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```bash
-                    curl -L -o moondream-0_5b-int4.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```powershell
-                    curl.exe -L -o moondream-0_5b-int4.mf.gz https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz
-                    ```
-                  </Tabs.Tab>
-                  <Tabs.Tab>
-                    ```python
-                    import requests
-
-                    url = "https://huggingface.co/vikhyatk/moondream2/resolve/9dddae84d54db4ac56fe37817aeaeb502ed083e2/moondream-0_5b-int4.mf.gz"
-                    response = requests.get(url)
-                    with open("moondream-0_5b-int4.mf.gz", "wb") as f:
-                        f.write(response.content)
-                    ```
-                  </Tabs.Tab>
-                </Tabs>
-                <div className="text-xs text-gray-500 p-2 bg-gray-50 border-t border-gray-200">
-                  Downloads: moondream-0_5b-int4.mf.gz
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </Tabs.Tab>
-</Tabs>
+<ModelVariants />
 
 ## Benchmarks
 
-<Tabs items={['2B Models', '0.5B Models']}>
-	<Tabs.Tab>
-		<div className='bg-white rounded-lg border border-gray-200 p-6 mt-6'>
-			<div className='overflow-x-auto -mx-6 px-6' style={{ WebkitOverflowScrolling: 'touch' }}>
-				<div className='min-w-[800px]'>
-					<table className='w-full'>
-						<thead>
-							<tr className='border-b-0 border-gray-200'>
-								<th className='text-left py-2 px-4 font-semibold text-gray-700'>Release</th>
-								<th className='text-right py-2 px-4 font-semibold text-gray-700'>VQAv2</th>
-								<th className='text-right py-2 px-4 font-semibold text-gray-700'>GQA</th>
-								<th className='text-right py-2 px-4 font-semibold text-gray-700'>TextVQA</th>
-								<th className='text-right py-2 px-4 font-semibold text-gray-700'>DocVQA</th>
-								<th className='text-right py-2 px-4 font-semibold text-gray-700'>TallyQA</th>
-								<th className='text-right py-2 px-4 font-semibold text-gray-700'>POPE</th>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<th className='text-left py-1 px-4'></th>
-								<th className='text-right py-1 px-4'></th>
-								<th className='text-right py-1 px-4'></th>
-								<th className='text-right py-1 px-4'></th>
-								<th className='text-right py-1 px-4'></th>
-								<th className='text-right py-1 px-4 text-xs text-gray-600'>(simple/full)</th>
-								<th className='text-right py-1 px-4 text-xs text-gray-600'>(rand/pop/adv)</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr className='border-b border-gray-200 bg-green-50'>
-								<td className='py-3 px-4'>
-									<div className='font-medium'>2024-08-26</div>
-									<div className='text-xs text-gray-500'>latest</div>
-								</td>
-								<td className='text-right py-3 px-4 font-mono'>80.3</td>
-								<td className='text-right py-3 px-4 font-mono'>64.3</td>
-								<td className='text-right py-3 px-4 font-mono'>65.2</td>
-								<td className='text-right py-3 px-4 font-mono'>70.5</td>
-								<td className='text-right py-3 px-4 font-mono'>82.6 / 77.6</td>
-								<td className='text-right py-3 px-4 font-mono'>89.6 / 88.8 / 87.2</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-07-23</td>
-								<td className='text-right py-3 px-4 font-mono'>79.4</td>
-								<td className='text-right py-3 px-4 font-mono'>64.9</td>
-								<td className='text-right py-3 px-4 font-mono'>60.2</td>
-								<td className='text-right py-3 px-4 font-mono'>61.9</td>
-								<td className='text-right py-3 px-4 font-mono'>82.0 / 76.8</td>
-								<td className='text-right py-3 px-4 font-mono'>91.3 / 89.7 / 86.9</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-05-20</td>
-								<td className='text-right py-3 px-4 font-mono'>79.4</td>
-								<td className='text-right py-3 px-4 font-mono'>63.1</td>
-								<td className='text-right py-3 px-4 font-mono'>57.2</td>
-								<td className='text-right py-3 px-4 font-mono'>30.5</td>
-								<td className='text-right py-3 px-4 font-mono'>82.1 / 76.6</td>
-								<td className='text-right py-3 px-4 font-mono'>91.5 / 89.6 / 86.2</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-05-08</td>
-								<td className='text-right py-3 px-4 font-mono'>79.0</td>
-								<td className='text-right py-3 px-4 font-mono'>62.7</td>
-								<td className='text-right py-3 px-4 font-mono'>53.1</td>
-								<td className='text-right py-3 px-4 font-mono'>30.5</td>
-								<td className='text-right py-3 px-4 font-mono'>81.6 / 76.1</td>
-								<td className='text-right py-3 px-4 font-mono'>90.6 / 88.3 / 85.0</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-04-02</td>
-								<td className='text-right py-3 px-4 font-mono'>77.7</td>
-								<td className='text-right py-3 px-4 font-mono'>61.7</td>
-								<td className='text-right py-3 px-4 font-mono'>49.7</td>
-								<td className='text-right py-3 px-4 font-mono'>24.3</td>
-								<td className='text-right py-3 px-4 font-mono'>80.1 / 74.2</td>
-								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-03-13</td>
-								<td className='text-right py-3 px-4 font-mono'>76.8</td>
-								<td className='text-right py-3 px-4 font-mono'>60.6</td>
-								<td className='text-right py-3 px-4 font-mono'>46.4</td>
-								<td className='text-right py-3 px-4 font-mono'>22.2</td>
-								<td className='text-right py-3 px-4 font-mono'>79.6 / 73.3</td>
-								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-03-06</td>
-								<td className='text-right py-3 px-4 font-mono'>75.4</td>
-								<td className='text-right py-3 px-4 font-mono'>59.8</td>
-								<td className='text-right py-3 px-4 font-mono'>43.1</td>
-								<td className='text-right py-3 px-4 font-mono'>20.9</td>
-								<td className='text-right py-3 px-4 font-mono'>79.5 / 73.2</td>
-								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-							</tr>
-							<tr className='border-b border-gray-200'>
-								<td className='py-3 px-4'>2024-03-04</td>
-								<td className='text-right py-3 px-4 font-mono'>74.2</td>
-								<td className='text-right py-3 px-4 font-mono'>58.5</td>
-								<td className='text-right py-3 px-4 font-mono'>36.4</td>
-								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-			<div className='mt-4 text-sm text-gray-600'>
-				<h4 className='font-medium mb-2'>Benchmark Details:</h4>
-				<ul className='space-y-1 list-disc pl-4'>
-					<li>
-						<span className='font-medium'>VQAv2</span>: Visual Question Answering v2 dataset - General visual reasoning
-					</li>
-					<li>
-						<span className='font-medium'>GQA</span>: Grounded Question Answering - Compositional visual reasoning
-					</li>
-					<li>
-						<span className='font-medium'>TextVQA</span>: Text Visual Question Answering - Reading text in images
-					</li>
-					<li>
-						<span className='font-medium'>DocVQA</span>: Document Visual Question Answering - Understanding documents
-					</li>
-					<li>
-						<span className='font-medium'>TallyQA</span>: Counting questions (simple vs. full complexity) - Object counting
-					</li>
-					<li>
-						<span className='font-medium'>POPE</span>: Popular Objects in Common Environment - Object presence verification (random/popular/adversarial)
-					</li>
-				</ul>
-			</div>
-		</div>
-	</Tabs.Tab>
-	<Tabs.Tab>
-		<div className='bg-white rounded-lg border border-gray-200 p-6 mt-6'>
-			<div className='overflow-x-auto'>
-				<table className='min-w-full'>
-					<thead>
-						<tr className='border-b-0 border-gray-200'>
-							<th className='text-left py-2 px-4 font-semibold text-gray-700'>Model</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>VQAv2</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>GQA</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>TallyQA</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>POPE</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>Natural Bench</th>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<th className='text-left py-1 px-4'></th>
-							<th className='text-right py-1 px-4'></th>
-							<th className='text-right py-1 px-4'></th>
-							<th className='text-right py-1 px-4 text-xs text-gray-600'>(simple/full)</th>
-							<th className='text-right py-1 px-4 text-xs text-gray-600'>(rand/pop/adv)</th>
-							<th className='text-right py-1 px-4'></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>
-								<div className='font-medium'>Moondream 0.5B</div>
-								<div className='text-xs text-gray-500'>latest (12-04-24)</div>
-							</td>
-							<td className='text-right py-3 px-4 font-mono'>68.92</td>
-							<td className='text-right py-3 px-4 font-mono'>57.24</td>
-							<td className='text-right py-3 px-4 font-mono'>71.82 / 67.91</td>
-							<td className='text-right py-3 px-4 font-mono'>85.1 / 79.43 / 77.53</td>
-							<td className='text-right py-3 px-4 font-mono'>44.9</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-
-    		<div className='mt-4 text-sm text-gray-600'>
-    		<h4 className='font-medium mb-2'>Benchmark Details:</h4>
-    			<ul className='space-y-1 list-disc pl-4'>
-    				<li>
-    					<span className='font-medium'>VQAv2</span>: Visual Question Answering v2 dataset - General visual reasoning
-    				</li>
-    				<li>
-    					<span className='font-medium'>GQA</span>: Grounded Question Answering - Compositional visual reasoning
-    				</li>
-    				<li>
-    					<span className='font-medium'>TallyQA</span>: Counting questions (simple vs. full complexity) - Object counting
-    				</li>
-    				<li>
-    					<span className='font-medium'>POPE</span>: Popular Objects in Common Environment - Object presence verification (random/popular/adversarial)
-    				</li>
-    				<li>
-    					<span className='font-medium'>Natural Bench</span>: Evaluation on natural adversarial samples requiring diverse visio-linguistic skills like attribute binding, relationships, logic and counting
-    				</li>
-    			</ul>
-    		</div>
-    	</div>
-    </Tabs.Tab>
-
-</Tabs>
+<Benchmarks />
 
 ## Feature Support
 
-<div className='bg-white rounded-lg border border-gray-200 p-6 mb-8'>
-	<div className='overflow-x-auto'>
-		<table className='min-w-full'>
-			<thead>
-				<tr className='border-b border-gray-200'>
-					<th className='text-left py-3 px-4 font-semibold text-gray-700'>Model</th>
-					<th className='text-center py-3 px-4 font-semibold text-gray-700'>Visual Q&A</th>
-					<th className='text-center py-3 px-4 font-semibold text-gray-700'>Captioning</th>
-					<th className='text-center py-3 px-4 font-semibold text-gray-700'>Detection</th>
-					<th className='text-center py-3 px-4 font-semibold text-gray-700'>Pointing</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr className='border-b border-gray-200'>
-					<td className='py-3 px-4'>2B Models (FP16/INT8/INT4)</td>
-					<td className='text-center py-3 px-4'>✅</td>
-					<td className='text-center py-3 px-4'>✅</td>
-					<td className='text-center py-3 px-4'>✅</td>
-					<td className='text-center py-3 px-4'>✅</td>
-				</tr>
-				<tr className='border-b border-gray-200'>
-					<td className='py-3 px-4'>0.5B Models (INT8/INT4)</td>
-					<td className='text-center py-3 px-4'>✅</td>
-					<td className='text-center py-3 px-4'>✅</td>
-					<td className='text-center py-3 px-4'>✅</td>
-					<td className='text-center py-3 px-4'>❌</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+<div className="mt-4 mb-8">
+  <FeatureSupport />
+  
+  <div className="mt-6 space-y-4">
+    <Callout type="info">
+      The experimental features are available but may have limitations or
+      require additional configuration.
+    </Callout>
+
+    <Callout type="note">
+      Features marked as "coming soon" are under active development and will be
+      available in future releases.
+    </Callout>
+
+  </div>
 </div>
 
-{/* Helper functions to calculate differences */}
 export const calculateDiff = (smaller, larger) => {
-  const percentDiff = ((larger - smaller) / smaller * 100).toFixed(0);
+  const percentDiff = (((larger - smaller) / smaller) * 100).toFixed(0);
   return {
     percent: percentDiff,
-    reduction: ((larger - smaller) / larger * 100).toFixed(0)
+    reduction: (((larger - smaller) / larger) * 100).toFixed(0),
   };
 };
 
 export const formatComparison = (metrics05b, metrics2b) => {
   const speedRatio = (metrics05b.speed / metrics2b.speed).toFixed(1);
   const ramDiff = calculateDiff(metrics05b.ram, metrics2b.ram);
-  
-  return {
-    speed: {
-      text: `${speedRatio}x faster`,
-      comparison: `${metrics05b.speed} vs ${metrics2b.speed} tokens/s`
-    },
-    ram: {
-      text: `${ramDiff.reduction}% less RAM`,
-      comparison: `${metrics05b.ram.toLocaleString()} vs ${metrics2b.ram.toLocaleString()} MB`
-    }
-  };
+
+return {
+speed: {
+text: `${speedRatio}x faster`,
+comparison: `${metrics05b.speed} vs ${metrics2b.speed} tokens/s`,
+},
+ram: {
+text: `${ramDiff.reduction}% less RAM`,
+comparison: `${metrics05b.ram.toLocaleString()} vs ${metrics2b.ram.toLocaleString()} MB`,
+},
+};
 };
 
-{/* Performance metrics */}
 export const metrics = {
   raspberryPi5: {
-    '0.5b': { speed: 0.7, ram: 1534, latency: 1.44 },
-    '2b': { speed: 0.19, ram: 3564, latency: 1.44 }
+    "0.5b": { speed: 0.7, ram: 1534, latency: 1.44 },
+    "2b": { speed: 0.19, ram: 3564, latency: 1.44 },
   },
   orangePi5: {
-    '0.5b': { speed: 1.35, ram: 1497, latency: 1.34 }
-  }
+    "0.5b": { speed: 1.35, ram: 1497, latency: 1.34 },
+  },
 };
